# eta-app

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Procfile  README.md  TASK.md  pyproject.toml  requirements.txt  tasks.py
apps/core/: apps.py
apps/core/api/: views.py
apps/core/tests/: test_api.py
apps/todo/: admin.py  models.py  urls.py  views.py
apps/todo/api/: serializers.py  urls.py  views.py
apps/todo/migrations/: 0001_initial.py  0002_alter_expectation_created_at_and_more.py
apps/todo/tests/: test_api_views.py  test_views.py
frontend/: .eslintrc.js  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: AppNotifications.vue  CreateEtaForm.vue  ExpectationsLoading.vue  RunCommandForm.vue  TheHeader.vue
frontend/src/composables/: useNotifications.js
frontend/src/router/: index.js
frontend/src/utils/: index.js
frontend/src/views/: ActiveETAsView.vue  HomeView.vue  LoginView.vue  RegisterView.vue
frontend/static/: main-0eba9afa.js  main-68556bbc.css  main-6994eaf4.css  main-6c84a897.js  main-8398a077.js  main-b0d0b959.css  main-ef5b0481.js  manifest.json
scripts/: setup.sh
settings/: asgi.py  settings.py  urls.py  wsgi.py
templates/: active-etas.html  index.html
